# CastEvaluation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: TblGeography.csv  county_adjacency.txt
include/: amqp.h  animal_scenario.h  base_scenario.h  bmp_grps.h  data_reader.h  land_scenario.h  manure_scenario.h  misc_utilities.h  report_loads.h  scenario.h
python/: 0_output_t.csv  2019-nexcess.json  ChesapeakeBay-NutrientsApplied.xlsx  TblAnimalPopulation-filtered.csv  TblCostBmpAnimal-reduced.csv  TblCostBmpAnimal.csv  adjacency_matrix.py  cast_neighbors.json  corecast_adjancency_matrix.py  create_neigbors.py  lhs-lc.py  parsed_county_data.json  prueba.json  read_nutrients_applied.py  reduce_animal_cost.py  reduce_animal_poulation.py  salida.csv  salida.json  test.csv
src/: amqp.cpp  animal_scenario.cpp  base_scenario.cpp  bmp_grps.cpp  data_reader.cpp  land_conv.cpp  land_scenario.cpp  manure_scenario.cpp  misc_utilities.cpp  report_loads.cpp  scenario.cpp
test/: CMakeLists.txt  bmp_grps_test.cpp  land_scenario_test.cpp  land_scenario_test.h  report_loads_test.cpp  report_loads_test.h  scenario_test.cpp  simple_test.cpp
